--- a/clases CSS/styleBienvenido.css
+++ b/clases CSS/styleBienvenido.css
@@ -1,5 +1,7 @@
 body{
     margin: 0;
+    font-family: 'Cabin', sans-serif;
+    background-color: #f5f5f5;
 }
 
 .contenedorImagen {
@@ -28,7 +30,7 @@ body{
 
 .header {
     box-sizing: border-box;
-    background-color: #FFFFFFFF;
+    background-color: #f5f5f5;
     padding: 50px;
     height: 110px; 
     display: flex; 
@@ -36,7 +38,7 @@ body{
     font-family: 'Cabin'; /* Body */
     font-size: 18px; 
     opacity: 1; 
-    background: #FFFFFFFF;
+    
     margin-top: 50px;
 }
 
