--- a/clases CSS/stylesInicioSesion.css
+++ b/clases CSS/stylesInicioSesion.css
@@ -2,7 +2,7 @@
 
 /* Estilos generales */
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Cabin', sans-serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
@@ -22,13 +22,14 @@ body {
     width: 100%;
     max-width: 400px;
     text-align: center;
+    border: 1px solid #dbdee5;
 }
 
 /* Logo provisional */
 .logo {
     position: absolute; /* Posicionamiento preciso */
-    top: 0px;         /* Distancia desde arriba */
-    left: 20px;        /* Distancia desde la izquierda */
+    top: 30px;         /* Distancia desde arriba */
+    left: 60px;        /* Distancia desde la izquierda */
     width: 150px;      /* Ancho ajustable */
     height: auto;      /* Mantiene proporción */
 }
