--- a/clases CSS/styleContactanos.css
+++ b/clases CSS/styleContactanos.css
@@ -48,7 +48,7 @@ h1 {
 .migas {
     position: static;
     top: 20px;
-    right: 400px;
+    right: 100px;
     font-family: 'Cabin', sans-serif;
     font-size: 16px;
     color: #2A2F8C;
@@ -63,7 +63,7 @@ h1 {
     text-align: center;
     background: linear-gradient(180deg, #FAFAFB 0%, #DEE1E6 100%);
     padding: 20px;
-    width: 90%;
+    width: 97%;
     max-width: 1200px;
     min-height: 300px;
     margin: 20px auto;
@@ -115,4 +115,22 @@ p {
     .card {
         margin: 10px auto;
     }
+}
+
+.icono_instagram {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.icono_x {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.icono_facebook {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
 }
