--- a/clases CSS/stylesInicioSesion.css
+++ b/clases CSS/stylesInicioSesion.css
@@ -122,7 +122,7 @@ h1 {
 
 /* Botón de inicio de sesión */
 .login-button {
-    background-color: #4d6375;
+    background-color: #607B92FF;
     color: white;
     border: none;
     padding: 14px;
@@ -135,7 +135,7 @@ h1 {
 }
 
 .login-button:hover {
-    background-color: #a4b5cc;
+    background-color: #043A5BFF;
 }
 
 /* Enlace para crear cuenta */
@@ -153,4 +153,17 @@ h1 {
 
 .signup-link a:hover {
     text-decoration: underline;
+}
+
+.migas {
+    position: fixed;
+    top: 20px;
+    right: 60px;
+    font-family: 'Cabin', sans-serif;
+    font-size: 16px;
+    color: #2A2F8C;
+    background: white;
+    padding: 8px 15px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
