--- a/clases CSS/styleCorte.css
+++ b/clases CSS/styleCorte.css
@@ -139,6 +139,69 @@ body {
     margin-left: var(--sidebar-collapsed);
 }
 
+/*--------------------------------------------------------------------------------------------- */
+
+.content {
+    margin-left: var(--sidebar-expanded);
+    margin-right: 260px; /* Añade este margen derecho igual al ancho del panel */
+    padding: 20px;
+    transition: margin-left var(--transition-speed);
+
+}
+
+/* Tarjeta de título */
+.title-card {
+    font-family: 'Cabin', sans-serif;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #043A5B;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+h1 {
+    font-size: 32px;
+    color: white;                   /* Color de texto oscuro */
+    text-align: center;                /* Centrado del texto */
+    
+}
+
+
+/*--------------------------------------------------------------------------------------------- */
+
+/* Estilos para el panel derecho */
+
+/* Panel derecho */
+.right-panel {
+    width: 260px;
+    background-color: #f5f5f5;
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1; /* Puedes reducirlo a 0 si no hay elementos superpuestos */
+    border-left: 1px solid #ddd;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+    /* Elimina cualquier propiedad que pueda causar superposición */
+}
+
+/* Contenido del panel derecho */
+.right-panel-content {
+    padding: 20px; /* Espaciado interno */
+    height: 100%; /* Altura completa del panel */
+    overflow-y: auto; /* Desplazamiento vertical si es necesario */
+}
+
+h2 {
+    font-size: 32px;
+    color: white;                   /* Color de texto oscuro */
+    text-align: center;                /* Centrado del texto */
+}
+
+
+
 /* Estilos responsivos */
 @media (max-width: 768px) {
     
